--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+astroid==3.3.5
 contourpy==1.3.0
 cycler==0.12.1
+dill==0.3.9
 fonttools==4.54.1
+isort==5.13.2
 kiwisolver==1.4.7
 matplotlib==3.9.2
+mccabe==0.7.0
 numpy==2.1.2
 packaging==24.1
 pillow==10.4.0
+platformdirs==4.3.6
+pylint==3.3.1
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 six==1.16.0
+tomli==2.0.2
+tomlkit==0.13.2
+typing_extensions==4.12.2
