--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ astroid==3.3.5
 contourpy==1.3.0
 cycler==0.12.1
 dill==0.3.9
+exceptiongroup==1.2.2
 fonttools==4.54.1
+iniconfig==2.0.0
 isort==5.13.2
 kiwisolver==1.4.7
 matplotlib==3.9.2
@@ -11,8 +13,10 @@ numpy==2.1.2
 packaging==24.1
 pillow==10.4.0
 platformdirs==4.3.6
+pluggy==1.5.0
 pylint==3.3.1
 pyparsing==3.1.4
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 six==1.16.0
 tomli==2.0.2
