--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==3.3.5
 contourpy==1.3.0
+coverage==7.6.1
 cycler==0.12.1
 dill==0.3.9
 exceptiongroup==1.2.2
@@ -17,6 +18,7 @@ pluggy==1.5.0
 pylint==3.3.1
 pyparsing==3.1.4
 pytest==8.3.3
+pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
 six==1.16.0
 tomli==2.0.2
