--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,12 @@
-name: CI
+strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.8", "3.9", "3.10"]
 
-# We can specify which Github events will trigger a CI build
-on: push
+    runs-on: ${{ matrix.os }}
 
-# now define a single job 'build' (but could define more)
-jobs:
-
-  build:
-
-    # we can also specify the OS to run tests on
-    runs-on: ubuntu-latest
-
+    # a job is a seq of steps
+    steps:
     # a job is a seq of steps
     steps:
 
@@ -19,16 +15,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
-
-    - name: Install Python dependencies
-      run: |
-        python3 -m pip install --upgrade pip
-        pip3 install -r requirements.txt
-
-    - name: Test with PyTest
-      run: |
-        python -m pytest --cov=inflammation.models tests/test_models.py
+        python-version: ${{ matrix.python-version }}
